--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,19 @@
-.App {
+.container {
+  width: 1000px;
+  /* background-color: blanchedalmond; */
+  margin: 0 auto;
+}
+
+.jumbo {
+  padding: 20px;
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.product {
+  border: 1px solid #999;
+  width: 400px;
+  display: inline-block;
+  vertical-align: top;
+  padding: 20px;
+  margin: 20px;
 }
